# rest-client-jules

./: .gitignore  README.md  pyproject.toml  pytest.ini
rest_client/: circuit_breaker.py  clients.py  config.py  exceptions.py
specs/: README.md  requirements.md
src/rest_client/: __init__.py  cache.py  middleware.py  pagination.py  rate_limit.py  retry.py
tests/: test_advanced.py  test_client.py
